--- a/apps/graph/subgraph.yaml
+++ b/apps/graph/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum
     name: AAProject
-    network: base-sepolia
+    network: mainnet
     source:
       abi: AAProject
-      address: "0x0E0e2Df15944c6c6f72981C365907f73782235eF"
-      startBlock: 13401361
+      address: "0x24Da30b7B63CEd9b75f341EcDD53cc3191b86D24"
+      startBlock: 1
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -53,11 +53,11 @@ dataSources:
       file: ./src/aa-project.ts
   - kind: ethereum
     name: RahatToken
-    network: base-sepolia
+    network: mainnet
     source:
       abi: RahatToken
-      address: "0x702968C16A0496e41272e723e4Fde16807472d32"
-      startBlock: 13401356
+      address: "0xE2146d57c4d3d7E83D9710f05CAE4d29213E7A02"
+      startBlock: 1
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -88,11 +88,11 @@ dataSources:
       file: ./src/rahat-token.ts
   - kind: ethereum
     name: RahatDonor
-    network: base-sepolia
+    network: mainnet
     source:
       abi: RahatDonor
-      address: "0xB8949420C77471471341666c64E07Fd8FDdEddEd"
-      startBlock: 13401352
+      address: "0x230CfB928ec5C027f576C5015390926C9c23C420"
+      startBlock: 1
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
