--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,14 +7,15 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    // "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
     "lib": ["es2020", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@rahat-project/cva": ["libs/cva/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
