--- a/package.json
+++ b/package.json
@@ -62,23 +62,25 @@
     "@prisma/client": "5.10.2",
     "@rahataid/contracts": "^0.0.1",
     "@rahataid/sdk": "^0.0.20",
-    "@stellar/stellar-sdk": "^12.2.0",
     "@rumsan/communication": "0.0.17",
     "@rumsan/connect": "^1.0.4",
     "@rumsan/prisma": "1.0.130",
     "@rumsan/settings": "^0.0.108",
+    "@stellar/stellar-sdk": "^12.2.0",
     "axios": "^1.7.2",
     "bull": "^4.12.9",
     "cheerio": "1.0.0-rc.12",
     "class-validator": "^0.14.1",
     "ethers": "^6.12.1",
+    "form-data": "^4.0.1",
     "ioredis": "^5.4.1",
     "luxon": "^3.4.4",
     "nodemailer": "^6.9.13",
     "openmeteo": "^1.1.3",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.1.1",
