--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "openmeteo": "^1.1.3",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
+    "stellar-sdk": "^13.1.0",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
