--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@rahataid/wallet": ["libs/wallet/src/index.ts"],
+      "@rahataid/stellar": ["libs/stellar-sdk/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
