--- a/package.json
+++ b/package.json
@@ -64,11 +64,13 @@
     "@rumsan/connect": "1.0.0",
     "@rumsan/prisma": "1.0.130",
     "@rumsan/settings": "^0.0.108",
+    "@stellar/stellar-sdk": "^13.1.0",
     "axios": "^1.7.2",
     "bull": "^4.12.9",
     "cheerio": "1.0.0-rc.12",
     "class-validator": "^0.14.1",
     "ethers": "^6.12.1",
+    "form-data": "^4.0.2",
     "ioredis": "^5.4.1",
     "luxon": "^3.4.4",
     "nodemailer": "^6.9.13",
@@ -76,7 +78,8 @@
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
     "stellar-sdk": "^13.1.0",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.1.1",
