feat: add seed for project setting

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ DB_RAHAT_CORE=rahat-platform-nx
 # Prisma database connection
 DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public
 CORE_DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_RAHAT_CORE}?schema=public
+ACTIVE_YEAR=2024
+RIVER_BASIN=Karnali
 
 # # comms
 # COMMUNICATION_URL=http://localhost:5200/v1
