--- a/.github/workflows/Stage-CICD.yaml
+++ b/.github/workflows/Stage-CICD.yaml
@@ -10,6 +10,7 @@ on:
 
 env:
   CI: false
+  MANIFEST_FILE: 'K8s-Manifest/Rahat/AA-Stage/Argo-Rollout/project-aa.yaml'
 
 jobs:
   deploy:
@@ -19,6 +20,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Get short SHA
+        id: vars
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Import Secrets
+        uses: hashicorp/vault-action@v2.4.0
+        with:
+          url: ${{ secrets.VAULT_URL }}
+          token: ${{ secrets.VAULT_TOKEN }}
+          secrets: |
+            github/data/general/docker/esatya username | DOCKERHUB_USERNAME ;
+            github/data/general/docker/esatya password | DOCKERHUB_TOKEN ;
 
       - uses: actions/setup-node@v3
         with:
@@ -38,8 +52,8 @@ jobs:
       - name: docker login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ env.DOCKERHUB_TOKEN }}
 
       # AA Image
       - name: build && push aa
@@ -49,4 +63,44 @@ jobs:
           context: .
           file: Dockerfile.aa
           push: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
-          tags: esatya/rahat-project-aa:stage
+          tags: |
+            esatya/rahat-project-aa:stage
+            esatya/rahat-project-aa:stage-${{ steps.vars.outputs.sha_short }}
+    outputs:
+      sha_short: ${{ steps.vars.outputs.sha_short }}
+
+  update-manifest:
+    name: Update Kubernetes Manifest
+    needs: deploy
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    steps:
+      - name: Import Secrets
+        uses: hashicorp/vault-action@v2.4.0
+        with:
+          url: ${{ secrets.VAULT_URL }}
+          token: ${{ secrets.VAULT_TOKEN }}
+          secrets: |
+            github/data/general/Stage-Manifest repo | MANIFEST_REPO ;
+            github/data/general/Stage-Manifest ssh-key | SSH_KEY ;
+
+      # Checkout the manifest repository using SSH
+      - name: Checkout Stage Manifest Repo
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ env.MANIFEST_REPO }}
+          ssh-key: ${{ env.SSH_KEY }}
+
+      # Update the image tag in the manifest
+      - name: Update Image Tag in Manifest
+        run: |
+          sed -i "s|image: esatya/rahat-project-aa:.*|image: esatya/rahat-project-aa:stage-${{ needs.deploy.outputs.sha_short }}|" ${{ env.MANIFEST_FILE }}
+
+      # Commit and push changes using SSH
+      - name: Commit and Push Changes
+        run: |
+          git config user.name "sandab-rumsan"
+          git config user.email "sandab@rumsan.net"
+          git add ${{ env.MANIFEST_FILE }}
+          git commit -m "runner: Update Rahat AA Stage UI image tag to aa-stage-${{ needs.deploy.outputs.sha_short }}"
+          git push origin main
