--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,9 +15,9 @@
     "baseUrl": ".",
     "paths": {
       "@rahat-project/cva": ["libs/cva/src/index.ts"],
-      "@rahat-project/stellar-sdk": ["libs/stellar-sdk/src/index.ts"],
-      "@rahataid/wallet": ["libs/wallet/src/index.ts"],
-      "@rahataid/stellar": ["libs/stellar-sdk/src/index.ts"]
+      "@rahataid/stellar-sdk": ["libs/stellar-sdk/src/index.ts"],
+      "@rahataid/stellar": ["libs/stellar-sdk/src/index.ts"],
+      "@rahataid/wallet": ["libs/wallet/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
