--- a/libs/stellar-sdk/project.json
+++ b/libs/stellar-sdk/project.json
@@ -4,6 +4,23 @@
   "sourceRoot": "libs/stellar-sdk/src",
   "projectType": "library",
   "tags": [],
-  "// targets": "to see all targets run: nx show project stellar-sdk --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@nx/js:tsc",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/libs/stellar-sdk",
+        "main": "libs/stellar-sdk/src/index.ts",
+        "tsConfig": "libs/stellar-sdk/tsconfig.lib.json",
+        "assets": ["libs/stellar-sdk/*.md"]
+      }
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "libs/stellar-sdk/jest.config.ts"
+      }
+    }
+  }
 }
