--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@rumsan/settings": "^0.0.108",
     "@stellar/stellar-sdk": "^13.1.0",
     "axios": "^1.7.2",
+    "bcryptjs": "^3.0.2",
     "bull": "^4.12.9",
     "cheerio": "1.0.0-rc.12",
     "class-validator": "^0.14.1",
@@ -101,6 +102,7 @@
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.107",
     "@swc/helpers": "~0.5.11",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
     "@types/luxon": "^3.4.2",
     "@types/node": "~18.16.20",
