--- a/soroban/trigger/contracts/hello-world/Cargo.toml
+++ b/soroban/trigger/contracts/hello-world/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hello-world"
+name = "soroban_contract"
 version = "0.0.0"
 edition = "2021"
 publish = false
@@ -9,8 +9,19 @@ crate-type = ["cdylib"]
 doctest = false
 
 [dependencies]
-soroban-sdk = { workspace = true }
+soroban-sdk = "21.5.0"
 wee_alloc = "0.4"
+# alloc = { package = "alloc", version = "0.0.0" }
 
 [dev-dependencies]
-soroban-sdk = { workspace = true, features = ["testutils"] }
+soroban-sdk = { version = "21.5.0", features = ["testutils"] }
+
+[profile.release]
+opt-level = 3
+overflow-checks = true
+debug = 0
+strip = "symbols"
+debug-assertions = false
+panic = "abort"
+codegen-units = 1
+lto = true
