chore: update seed

--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,13 @@ DB_USERNAME=rahat
 DB_PASSWORD=rahat123
 DB_NAME=rahat-aa
 DB_RAHAT_CORE=rahat-platform-nx
+DB_RAHAT_TRIGGERS=rahat-triggers
 
 # Prisma database connection
 DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public
 CORE_DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_RAHAT_CORE}?schema=public
+TRIGGER_DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_RAHAT_TRIGGERS}?schema=public
+
 ACTIVE_YEAR=2024
 RIVER_BASIN=Karnali
 
@@ -49,3 +52,8 @@ STELLAR_DEMO_WALLET=https://demo-wallet-server.stellar.org
 HORIZON_URL=https://horizon-testnet.stellar.org
 
 ASSET_CREATOR=
+
+{
+    "groupUUID": "c3bb8a8e-e36b-49e4-bf12-90505a7b50b5",
+    "appURL": "https://api-aa-dev.rahat.io/v1/beneficiaries/import-tools"
+}
