--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@rumsan/prisma": "1.0.130",
     "@rumsan/settings": "^0.0.108",
     "@stellar/stellar-sdk": "^13.1.0",
+    "async-mutex": "^0.5.0",
     "axios": "^1.7.2",
     "bcryptjs": "^3.0.2",
     "bull": "^4.12.9",
@@ -79,6 +80,7 @@
     "luxon": "^3.4.4",
     "nodemailer": "^6.9.13",
     "openmeteo": "^1.1.3",
+    "redis-lock": "^1.0.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
