--- a/apps/aa/project.json
+++ b/apps/aa/project.json
@@ -45,6 +45,14 @@
           "buildTarget": "aa:build:production"
         }
       }
+    },
+    "test": {
+      "executor": "@nrwl/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/apps/aa"],
+      "options": {
+        "jestConfig": "apps/aa/jest.config.ts",
+        "passWithNoTests": true
+      }
     }
   },
   "tags": []
