--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.6",
     "@nomicfoundation/hardhat-ethers": "^3.0.6",
     "@nomicfoundation/hardhat-verify": "2.0.7",
+    "@nrwl/jest": "^19.8.4",
     "@nx/eslint": "18.2.1",
     "@nx/eslint-plugin": "18.2.1",
     "@nx/jest": "18.2.1",
