--- a/.env.example
+++ b/.env.example
@@ -12,10 +12,13 @@ DB_USERNAME=rahat
 DB_PASSWORD=rahat123
 DB_NAME=rahat-aa
 DB_RAHAT_CORE=rahat-platform-nx
+DB_RAHAT_TRIGGERS=rahat-triggers
 
 # Prisma database connection
 DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public
 CORE_DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_RAHAT_CORE}?schema=public
+TRIGGER_DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_RAHAT_TRIGGERS}?schema=public
+
 ACTIVE_YEAR=2024
 RIVER_BASIN=Karnali
 
