--- a/.github/workflows/CodeCov.yaml
+++ b/.github/workflows/CodeCov.yaml
@@ -15,9 +15,11 @@ jobs:
 
       - name: Set up Node
         uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Run tests
         run: npx nx test aa --coverage
