--- a/.github/workflows/CodeCov.yaml
+++ b/.github/workflows/CodeCov.yaml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Generate Prisma Client
+        run: npx prisma generate
+
       - name: Run tests
         run: npx nx test aa --coverage
 
