--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "class-validator": "^0.14.1",
     "ethers": "^6.12.1",
     "form-data": "^4.0.2",
+    "inquirer": "^12.6.1",
     "ioredis": "^5.4.1",
     "luxon": "^3.4.4",
     "nodemailer": "^6.9.13",
