--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "bcryptjs": "^3.0.2",
     "bull": "^4.12.9",
     "cheerio": "1.0.0-rc.12",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "ethers": "^6.12.1",
     "form-data": "^4.0.2",
