internal xlm faucet

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,6 @@ STELLAR_DEMO_WALLET=https://demo-wallet-server.stellar.org
 HORIZON_URL=https://horizon-testnet.stellar.org
 
 ASSET_CREATOR=
+FAUCET_SECRET_KEY=
+
+FUNDING_AMOUNT=10
