--- a/.github/workflows/Stage-CICD.yaml
+++ b/.github/workflows/Stage-CICD.yaml
@@ -10,7 +10,9 @@ on:
 
 env:
   CI: false
-  MANIFEST_FILE: 'K8s-Manifest/Rahat/AA-Stage/Argo-Rollout/project-aa.yaml'
+  MANIFEST_FILE1: 'K8s-Manifest/Rahat/AA-Stage/Argo-Rollout/project-aa.yaml'
+  MANIFEST_FILE2: 'K8s-Manifest/Rahat/AA-Stage/Argo-Rollout/project-aa-unicef.yaml'
+
 
 jobs:
   deploy:
@@ -21,9 +23,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Get short SHA
+      - name: Get short SHA and short Run ID
         id: vars
-        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+        run: |
+          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "run_id_short=${GITHUB_RUN_ID:0:3}" >> $GITHUB_OUTPUT
 
       - name: Import Secrets
         uses: hashicorp/vault-action@v2.4.0
@@ -65,9 +69,10 @@ jobs:
           push: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
           tags: |
             esatya/rahat-project-aa:stage
-            esatya/rahat-project-aa:stage-${{ steps.vars.outputs.sha_short }}
+            esatya/rahat-project-aa:stage-${{ steps.vars.outputs.sha_short }}-${{ steps.vars.outputs.run_id_short }}
     outputs:
       sha_short: ${{ steps.vars.outputs.sha_short }}
+      run_id_short: ${{ steps.vars.outputs.run_id_short }}
 
   update-manifest:
     name: Update Kubernetes Manifest
@@ -94,13 +99,16 @@ jobs:
       # Update the image tag in the manifest
       - name: Update Image Tag in Manifest
         run: |
-          sed -i "s|image: esatya/rahat-project-aa:.*|image: esatya/rahat-project-aa:stage-${{ needs.deploy.outputs.sha_short }}|" ${{ env.MANIFEST_FILE }}
+          sed -i "s|image: esatya/rahat-project-aa:.*|image: esatya/rahat-project-aa:stage-${{ needs.deploy.outputs.sha_short }}-${{ needs.deploy.outputs.run_id_short }}|" ${{ env.MANIFEST_FILE1 }}
+          sed -i "s|image: esatya/rahat-project-aa:.*|image: esatya/rahat-project-aa:stage-${{ needs.deploy.outputs.sha_short }}-${{ needs.deploy.outputs.run_id_short }}|" ${{ env.MANIFEST_FILE2 }}
+
 
       # Commit and push changes using SSH
       - name: Commit and Push Changes
         run: |
           git config user.name "sandab-rumsan"
           git config user.email "sandab@rumsan.net"
-          git add ${{ env.MANIFEST_FILE }}
-          git commit -m "runner: Update Rahat AA Stage UI image tag to aa-stage-${{ needs.deploy.outputs.sha_short }}"
+          git add ${{ env.MANIFEST_FILE1 }}
+          git add ${{ env.MANIFEST_FILE2 }}
+          git commit -m "runner: Update Rahat AA Stage UI image tag to aa-stage-${{ needs.deploy.outputs.sha_short }}-${{ needs.deploy.outputs.run_id_short }}"
           git push origin main
