--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "paths": {
       "@rahat-project/cva": ["libs/cva/src/index.ts"],
       "@rahataid/stellar-sdk": ["libs/stellar-sdk/src/index.ts"],
+      "@rahataid/subgraph": ["libs/subgraph/query.ts"],
       "@rahataid/stellar": ["libs/stellar-sdk/src/index.ts"],
       "@rahataid/wallet": ["libs/wallet/src/index.ts"]
     }
