--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ project-setup-summary.json
 api-test.log
 
 mainnet-stellar-seed.md
+
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
