--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "cheerio": "1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "ethers": "^6.12.1",
     "form-data": "^4.0.2",
     "inquirer": "^12.6.1",
