--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build:all": "npx nx run-many --target=build --all",
     "test:aa": "npx nx test aa",
-    "test":"nx test aa --coverage",
+    "test":"nx test aa",
+    "test-coverage":"nx test aa --coverage",
     "start": "nx serve aa",
     "dev": "nx serve aa --watch --verbose",
     "trigger-activation": "ts-node tools/scripts/trigger-activation.ts",
