--- a/libs/cash-tracker/src/tsconfig.json
+++ b/libs/cash-tracker/src/tsconfig.json
@@ -11,8 +11,8 @@
     "resolveJsonModule": true,
     "declaration": true,
     "outDir": "./dist",
-    "rootDir": "./src",
-    "baseUrl": "./src",
+    "rootDir": "./",
+    "baseUrl": "./",
     "paths": {
       "*": ["*"],
       "src/*": ["*"]
