Implement Cash Tracker Microservice with Controller, Module, and Service
- Added `CashTrackerController` to handle actions and transactions.
- Created `CashTrackerModule` to encapsulate the service and controller.
- Introduced `CashTrackerService` for business logic related to cash tracking.
- Defined DTOs for request validation and data transfer.
- Updated `tsconfig.base.json` to include the new `@rahataid/cash-tracker` library.
- Added comprehensive README documentation for the Cash Tracker microservice.
- Included necessary configuration files and constants for the SDK.
- Implemented utility functions for validation and formatting within the SDK.
- Established event handling and error management for robust operation.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
       "@rahat-project/cva": ["libs/cva/src/index.ts"],
       "@rahataid/stellar-sdk": ["libs/stellar-sdk/src/index.ts"],
       "@rahataid/stellar": ["libs/stellar-sdk/src/index.ts"],
-      "@rahataid/wallet": ["libs/wallet/src/index.ts"]
+      "@rahataid/wallet": ["libs/wallet/src/index.ts"],
+      "@rahataid/cash-tracker": ["libs/cash-tracker/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
