--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,12 @@ ASSET_CREATOR=
 FAUCET_SECRET_KEY=
 
 FUNDING_AMOUNT=10
+
+CHAIN_ID=8888
+CHAIN_NAME='localhost'
+CHAIN_RPCURL='http://127.0.0.1:8888'
+CHAIN_TYPE='evm'
+CHAIN_CURRENCY_SYMBOL=
+CHAIN_CURRENCY_NAME=
+CHAIN_EXPLORER_URL=
+
