--- a/package.json
+++ b/package.json
@@ -140,5 +140,6 @@
     "ts-node": "10.9.1",
     "typescript": "~5.4.5",
     "webpack-cli": "^5.1.4"
-  }
+  },
+  "packageManager": "pnpm@8.14.1"
 }
