update graph deploy scritpt

--- a/apps/graph/package.json
+++ b/apps/graph/package.json
@@ -10,7 +10,8 @@
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 rahat-aa",
     "test": "graph test",
     "prepare:base-sepolia": "mustache config/base-sepolia.json subgraph.template.yaml > subgraph.yaml",
-    "deploy:base-sepolia": "pnpm run prepare:base-sepolia && pnpm run codegen && pnpm run build && goldsky subgraph deploy rahat-aa/1.0.0 --path . --tag base-sepolia --tag testnet"
+    "deploy-base-sepolia": "graph deploy --studio --network base-sepolia aa-unicef-evm-dev"
+
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.73.0",
