--- a/.github/workflows/test-load.yaml
+++ b/.github/workflows/test-load.yaml
@@ -1,19 +1,41 @@
-name: Test Load CI/CD
+name: Test load CICD
+
 on:
   workflow_dispatch:
+    inputs:
+      image_name:
+        description: 'Docker image name (e.g., rahat-project-aa)'
+        required: true
+        default: 'rahat-project-aa'
+        type: string
+      dockerfile_path:
+        description: 'Path to Dockerfile'
+        required: true
+        default: 'Dockerfile.aa'
+        type: string
+      tag_prefix:
+        description: 'Tag prefix (e.g., test-load)'
+        required: true
+        default: 'test-load'
+        type: string
 
 env:
   CI: false
 
 jobs:
   deploy:
-    name: build && push image to Docker hub
+    name: Build & Push Docker Image
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Import Secrets
+      - name: Get short SHA
+        id: vars
+        run: |
+          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Import Secrets from Vault
         id: vault
         uses: hashicorp/vault-action@v2.4.0
         with:
@@ -23,11 +45,12 @@ jobs:
             github/data/general/docker/esatya username | DOCKERHUB_USERNAME ;
             github/data/general/docker/esatya password | DOCKERHUB_TOKEN ;
 
-      - uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 20.10.0
 
-      - name: install dependencies and build apps
+      - name: Install dependencies and build
         run: |
           npm install -g pnpm@8.14.1 only-allow
           pnpm install
@@ -38,20 +61,26 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Docker Login
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ steps.vault.outputs.DOCKERHUB_USERNAME }}
           password: ${{ steps.vault.outputs.DOCKERHUB_TOKEN }}
 
-      # AA Image
-      - name: build && push aa
-        id: build-push-aa
+      - name: Build and Push Docker Image
+        id: build-push
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: Dockerfile.aa
+          file: ${{ inputs.dockerfile_path }}
           push: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
           tags: |
-            esatya/rahat-project-aa:test-load
-            esatya/rahat-project-aa:test-load-${{ github.sha }}
+            esatya/${{ inputs.image_name }}:${{ inputs.tag_prefix }}
+            esatya/${{ inputs.image_name }}:${{ inputs.tag_prefix }}-${{ steps.vars.outputs.sha_short }}
+
+      - name: Image digest
+        run: echo ${{ steps.build-push.outputs.digest }}
+
+    outputs:
+      sha_short: ${{ steps.vars.outputs.sha_short }}
+      image_tag: esatya/${{ inputs.image_name }}:${{ inputs.tag_prefix }}-${{ steps.vars.outputs.sha_short }}
