--- a/.github/workflows/test-load.yaml
+++ b/.github/workflows/test-load.yaml
@@ -1,4 +1,4 @@
-name: Test load CICD
+name: Test Load CICD
 
 on:
   workflow_dispatch:
@@ -21,6 +21,8 @@ on:
 
 env:
   CI: false
+  NODE_VERSION: '20.10.0'
+  PNPM_VERSION: '8.14.1'
 
 jobs:
   deploy:
@@ -30,10 +32,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Get short SHA
+      - name: Get short SHA and timestamp
         id: vars
         run: |
           echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "timestamp=$(date +%s)" >> $GITHUB_OUTPUT
 
       - name: Import Secrets from Vault
         id: vault
@@ -45,42 +48,123 @@ jobs:
             github/data/general/docker/esatya username | DOCKERHUB_USERNAME ;
             github/data/general/docker/esatya password | DOCKERHUB_TOKEN ;
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      # Install pnpm FIRST
+      - name: Install pnpm
+        uses: pnpm/action-setup@v3
         with:
-          node-version: 20.10.0
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
 
-      - name: Install dependencies and build
+      # Setup Node.js with pnpm cache
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+
+      # Get pnpm store path
+      - name: Get pnpm store directory
+        shell: bash
         run: |
-          npm install -g pnpm@8.14.1 only-allow
-          pnpm install
-          npx nx reset
-          pnpm prisma:generate
-          pnpm build:all
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
+      # Cache pnpm store
+      - name: Cache pnpm store
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      # Cache node_modules
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            node_modules
+            **/node_modules
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
+
+      # Cache Nx build cache
+      - name: Cache Nx
+        uses: actions/cache@v4
+        with:
+          path: .nx/cache
+          key: ${{ runner.os }}-nx-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx') }}
+          restore-keys: |
+            ${{ runner.os }}-nx-${{ hashFiles('**/pnpm-lock.yaml') }}-
+            ${{ runner.os }}-nx-
+
+      # Install dependencies with lockfile handling
+      - name: Install dependencies
+        run: |
+          if [ -f pnpm-lock.yaml ]; then
+            echo "pnpm-lock.yaml found, checking compatibility..."
+            if pnpm install --frozen-lockfile 2>/dev/null; then
+              echo "✅ Lockfile is compatible"
+            else
+              echo "⚠️  Lockfile is incompatible, regenerating..."
+              rm pnpm-lock.yaml
+              pnpm install
+              echo "⚠️  WARNING: Lockfile was regenerated. Please commit the new pnpm-lock.yaml"
+            fi
+          else
+            echo "⚠️  No pnpm-lock.yaml found, installing fresh..."
+            pnpm install
+            echo "⚠️  WARNING: Lockfile was generated. Please commit pnpm-lock.yaml"
+          fi
+
+      # Generate Prisma client
+      - name: Generate Prisma client
+        run: pnpm prisma:generate
+
+      # Build all apps (Nx will use cache)
+      - name: Build applications
+        run: pnpm build:all
+
+      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # Login to Docker Hub with secrets
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ steps.vault.outputs.DOCKERHUB_USERNAME }}
           password: ${{ steps.vault.outputs.DOCKERHUB_TOKEN }}
 
+      # Build and push with layer caching
       - name: Build and Push Docker Image
         id: build-push
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ${{ inputs.dockerfile_path }}
-          push: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
+          push: true
           tags: |
             esatya/${{ inputs.image_name }}:${{ inputs.tag_prefix }}
             esatya/${{ inputs.image_name }}:${{ inputs.tag_prefix }}-${{ steps.vars.outputs.sha_short }}
+            esatya/${{ inputs.image_name }}:${{ inputs.tag_prefix }}-${{ steps.vars.outputs.sha_short }}-${{ steps.vars.outputs.timestamp }}
+          cache-from: type=registry,ref=esatya/${{ inputs.image_name }}:buildcache
+          cache-to: type=registry,ref=esatya/${{ inputs.image_name }}:buildcache,mode=max
+          provenance: false
+          labels: |
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.created=${{ steps.vars.outputs.timestamp }}
 
+      # Output image digest
       - name: Image digest
-        run: echo ${{ steps.build-push.outputs.digest }}
+        run: |
+          echo "Image digest: ${{ steps.build-push.outputs.digest }}"
+          echo "Image tags:"
+          echo "  - esatya/${{ inputs.image_name }}:${{ inputs.tag_prefix }}"
+          echo "  - esatya/${{ inputs.image_name }}:${{ inputs.tag_prefix }}-${{ steps.vars.outputs.sha_short }}"
 
     outputs:
       sha_short: ${{ steps.vars.outputs.sha_short }}
       image_tag: esatya/${{ inputs.image_name }}:${{ inputs.tag_prefix }}-${{ steps.vars.outputs.sha_short }}
+      digest: ${{ steps.build-push.outputs.digest }}
